deploy/console/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hacbs-jvm-console
  name: hacbs-jvm-console
  namespace: jvm-build-service
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: hacbs-jvm-console
  sessionAffinity: None
  type: ClusterIP
