deploy/console/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: console
  namespace: jvm-build-service
  labels:
    app: hacbs-jvm-console
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: hacbs-jvm-console
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
